# MiAi

./: .gitignore  AGENTS.md  LICENSE  README.md  chat.py  pyproject.toml  requirements.txt  symbolic.py  test_chat_api.py  test_chat_prompt.py  test_conversation.py  test_knowledge_base.py  test_terminal_mode.py  test_training_pipeline.py  test_tui_chat_mocked.py  train.py  tui_chat.py
.github/workflows/: python-tests.yml
finetuned-model/: adapter_config.json  config.json  tokenizer.json
templates/: chat.html
